[package]
name = "oxtui"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "README.md", "Cargo.toml", "LICENSE"]
license = "MIT"
authors = ["Kittech <kittech@skiff.com>"]
repository = "https://github.com/justfoxx/oxtui"
description = "Oxidized library for TUIs"

[lib]
name = "oxtui"
path = "src/lib.rs"

[[bin]]
name = "helloworld"
path = "examples/helloworld.rs"

[dependencies]
crossterm = "0.27.0"
